# deds_project1

./: .gitignore  .pdm-python  README.md  README.txt  dataWarehouse.ipynb  dataWarehouse.py  pyproject.toml  sourceDataModel.ipynb  sourceDataModel.py
RIMS/: RIM DATAWAREHOUSE.txt  SDM RIM.txt
databases/: SDM RIM.txt
databases/AdventureWorks/: HumanResources_Department.csv  HumanResources_Employee.csv  Person_Address.csv  Person_Person.csv  Production_BillOfMaterials.csv  Production_Product.csv  Production_ProductCategory.csv  Purchasing_PurchaseOrderDetail.csv  Purchasing_PurchaseOrderHeader.csv  Purchasing_Vendor.csv  Sales_Customer.csv  Sales_SalesTerritory.csv  Sales_Store.csv
