[project]
name = "deds_project1"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Sam Stille", email = "samstille2712@yahoo.nl"},
]
dependencies = []
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
